--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,8 @@ project(GraphPartitioning)
 set(CMAKE_CXX_STANDARD 17)  # Use C++17 (adjust as needed)
 set(CMAKE_CXX_FLAGS "-Wall -g")  # Match Makefile flags
 
-# Source files shared by both executables
+find_package(nlohmann_json 3.2.0 REQUIRED)
+
 set(SOURCES src/graph.cpp src/graph_io.cpp)
 
 add_subdirectory(third_party/SharedMap)
@@ -17,8 +18,10 @@ add_executable(sharedMapTest tests/sharedMapTest.cpp)
 
 
 target_link_libraries(graph_test sharedmap)
-target_link_libraries(graph_repartitioning sharedmap)
+target_link_libraries(graph_repartitioning sharedmap nlohmann_json::nlohmann_json)
 target_link_libraries(sharedMapTest sharedmap)
 
 target_include_directories(sharedMapTest PRIVATE ${CMAKE_SOURCE_DIR}/third_party/SharedMap/include)
 target_include_directories(graph_repartitioning PRIVATE ${CMAKE_SOURCE_DIR}/third_party/SharedMap/include)
+
+
