Add fileUtils. Clean up graph_repartitioning

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_FLAGS "-Wall -g")  # Match Makefile flags
 
 find_package(nlohmann_json 3.2.0 REQUIRED)
 
-set(SOURCES src/graph.cpp src/graph_io.cpp)
+set(SOURCES src/graph.cpp src/graph_io.cpp util/fileUtils.cpp)
 
 add_subdirectory(third_party/SharedMap)
 
@@ -15,13 +15,11 @@ add_executable(graph_test tests/graph_test.cpp ${SOURCES})
 add_executable(graph_repartitioning src/graph_repartitioning.cpp ${SOURCES})
 add_executable(sharedMapTest tests/sharedMapTest.cpp)
 
-
-
 target_link_libraries(graph_test sharedmap)
 target_link_libraries(graph_repartitioning sharedmap nlohmann_json::nlohmann_json)
 target_link_libraries(sharedMapTest sharedmap)
 
-target_include_directories(sharedMapTest PRIVATE ${CMAKE_SOURCE_DIR}/third_party/SharedMap/include)
-target_include_directories(graph_repartitioning PRIVATE ${CMAKE_SOURCE_DIR}/third_party/SharedMap/include)
+
+
 
 
