--- a/res/sharedMapConfigs/sharedMap_config5.json
+++ b/res/sharedMapConfigs/sharedMap_config5.json
@@ -1,13 +1,13 @@
 {
     "hierarchy": [2, 2, 4],
-    "distance": [1, 10, 30],
-    "l": 3,
+    "distance": [1, 10, 3],
+    "l": 2,
     "imbalance": 0.03,
     "n_threads": 10,
     "seed": 0,
     "strategy": "NAIVE",
-    "parallel_alg": "MTKAHYPAR_DEFAULT",
-    "serial_alg": "KAFFPA_FAST",
+    "parallel_alg": "MTKAHYPAR_HIGHEST_QUALITY",
+    "serial_alg": "KAFFPA_STRONG",
     "verbose_error": true,
     "verbose_statistics": true
 }
