--- a/res/sharedMapConfigs/sharedMap_config5.json
+++ b/res/sharedMapConfigs/sharedMap_config5.json
@@ -1,9 +1,9 @@
 {
-    "hierarchy": [2, 2, 4],
-    "distance": [1, 10, 3],
-    "l": 2,
+    "hierarchy": [3],
+    "distance": [1],
+    "l": 1,
     "imbalance": 0.03,
-    "n_threads": 10,
+    "n_threads": 1,
     "seed": 0,
     "strategy": "NAIVE",
     "parallel_alg": "MTKAHYPAR_HIGHEST_QUALITY",
