start working on localSearchAlgo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
 
 find_package(nlohmann_json 3.2.0 REQUIRED)
 
-set(SOURCES src/graph.cpp src/graph_io.cpp util/fileUtils.cpp src/graphRFS.cpp src/graphRFSMultilevel.cpp)
+set(SOURCES src/graph.cpp src/graph_io.cpp util/fileUtils.cpp src/graphRFS.cpp src/graphRFSMultilevel.cpp src/graphLocalSearch.cpp)
 
 add_subdirectory(third_party/SharedMap)
 add_subdirectory(third_party/ProcessMappingAnalyzer)
@@ -28,6 +28,7 @@ add_executable(graphRFSTest tests/function_tests/graphRFSTest.cpp ${SOURCES})
 add_executable(graphRFSExp experiments/graphRFSExperiments/graphRFSExperiments.cpp ${SOURCES})
 add_executable(graphRFSMultilevelExp experiments/graphRFSExperiments/graphRFSMultilevelExperiments.cpp ${SOURCES} )
 add_executable(graphRFSMultilevelTest tests/function_tests/graphRFSMultilevelTest.cpp ${SOURCES} )
+add_executable(graphLSTest tests/function_tests/graphLocalSearchTest.cpp ${SOURCES})
 
 
 
@@ -40,6 +41,7 @@ target_link_libraries(graphRFSTest sharedmap nlohmann_json::nlohmann_json)
 target_link_libraries(graphRFSExp sharedmap nlohmann_json::nlohmann_json)
 target_link_libraries(graphRFSMultilevelExp sharedmap nlohmann_json::nlohmann_json)
 target_link_libraries(graphRFSMultilevelTest sharedmap nlohmann_json::nlohmann_json)
+target_link_libraries(graphLSTest sharedmap nlohmann_json::nlohmann_json)
 
 
 
